--- a/style.css
+++ b/style.css
@@ -1,53 +1,54 @@
-@import url('https://fonts.googleapis.com/css2?family=Mochiy+Pop+P+One&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Mochiy+Pop+P+One&display=swap");
 
-*{
+* {
   box-sizing: border-box;
   list-style: none;
   margin: 0;
   padding: 0;
 }
 body {
-  background: #ff4e6b;
+  background: #182137;
   text-align: center;
   padding: 0;
   font-family: "Rubik", sans-serif;
 }
 
-div{
+div {
   overflow: hidden;
 }
-.head{
+.head {
   padding: 20px;
   color: #ffffff;
   background-color: #182137;
   display: flex;
   justify-content: center;
-  font-family: 'Mochiy Pop P One', sans-serif;
+  font-family: "Mochiy Pop P One", sans-serif;
   font-size: 20px;
   letter-spacing: 3px;
 }
-.dojeto{
+.dojeto {
   color: #00ccff;
   padding-left: 10px;
 }
-nav{
+nav {
   text-align: left;
   padding: 20px;
+  background-color: #ff4e6b;
 }
-nav a{
+nav a {
   text-decoration: none;
   padding: 20px;
   color: white;
   letter-spacing: 3px;
 }
-.image{
+.image {
   display: flex;
   background-color: #182137;
   flex-direction: row;
-  padding: 20px; 
+  padding: 20px;
 }
-img{
-  width: 392px;
+img {
+  width: 380px;
 }
 .btn {
   margin-left: 500px;
@@ -59,9 +60,35 @@ img{
   border-radius: 30px;
   height: 450px;
 }
-.btn-1,.btn-2,.btn-3{
+.btn-1,
+.btn-2,
+.btn-3 {
   margin: 20px;
 }
+@media screen and (max-width: 1095px) {
+  nav a {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+  }
+  nav {
+    padding: 0px;
+  }
+  .head {
+    display: flex;
+    flex-direction: column;
+  }
+  .image {
+    display: block;
+  }
+  img {
+    width: 310px;
+  }
+  .btn {
+    margin: 30px;
+  }
+}
+
 /* button animation copyright to their */
 /* From cssbuttons.io by @nikk7007 */
 button {
@@ -73,14 +100,14 @@ button {
   text-align: center;
   text-transform: uppercase;
   font-size: 25px;
-  transition: .3s;
+  transition: 0.3s;
   z-index: 1;
   font-family: inherit;
   color: #ff4e6b;
- }
- 
- button::before {
-  content: '';
+}
+
+button::before {
+  content: "";
   width: 0;
   height: 300%;
   position: absolute;
@@ -88,42 +115,15 @@ button {
   left: 50%;
   transform: translate(-50%, -50%) rotate(45deg);
   background: #ff4e6b;
-  transition: .5s ease;
+  transition: 0.5s ease;
   display: block;
   z-index: -1;
- }
- 
- button:hover::before {
+}
+
+button:hover::before {
   width: 105%;
- }
- 
- button:hover {
+}
+
+button:hover {
   color: #111;
- }
- 
-@media screen and (max-width: 1095px){
-  nav a{
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-  }
-  nav{
-    padding: 0px;
-  }
-  .head{
-    display: flex;
-    flex-direction: column;
-  }
-  .image {
-    display: block;
-  }
-  img{
-    width: 310px;
-  }
-  .btn{
-    margin: 30px;
-  }
-  button{
-    font-size: 20px;
-  }
 }
