--- a/style.css
+++ b/style.css
@@ -65,29 +65,6 @@ img {
 .btn-3 {
   margin: 20px;
 }
-@media screen and (max-width: 1095px) {
-  nav a {
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-  }
-  nav {
-    padding: 0px;
-  }
-  .head {
-    display: flex;
-    flex-direction: column;
-  }
-  .image {
-    display: block;
-  }
-  img {
-    width: 310px;
-  }
-  .btn {
-    margin: 30px;
-  }
-}
 
 /* button animation copyright to their */
 /* From cssbuttons.io by @nikk7007 */
@@ -126,4 +103,31 @@ button:hover::before {
 
 button:hover {
   color: #111;
+}
+
+@media screen and (max-width: 1095px) {
+  nav a {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+  }
+  nav {
+    padding: 0px;
+  }
+  .head {
+    display: flex;
+    flex-direction: column;
+  }
+  .image {
+    display: block;
+  }
+  img {
+    width: 310px;
+  }
+  .btn {
+    margin: 30px;
+  }
+  button {
+    font-size: 20px;
+  }
 }
