--- a/style.css
+++ b/style.css
@@ -118,6 +118,7 @@ img {
 }
 #preloader{
   background: black url(/Potential\ Loading\ Icon\ is\ Pleasing.....\ -\ Imgur.gif) no-repeat center center;
+  background-size: 20%;
   height: 100vh;
   position: fixed;
   width: 100%;
