--- a/style.css
+++ b/style.css
@@ -1,168 +1,186 @@
 @import url("https://fonts.googleapis.com/css2?family=Mochiy+Pop+P+One&display=swap");
-
-* {
-  box-sizing: border-box;
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
-body {
-  background: #182137;
-  text-align: center;
-  padding: 0;
-  font-family: "Rubik", sans-serif;
+*{
+    margin: 0;
+    padding: 0;
 }
 
-div {
-  overflow: hidden;
+body{
+    background-color: #182137;
 }
-.head {
-  padding: 20px;
-  color: #ffffff;
-  background-color: #182137;
-  display: flex;
-  justify-content: center;
-  font-family: "Mochiy Pop P One", sans-serif;
-  font-size: 20px;
-  letter-spacing: 3px;
-}
-.dojeto {
-  color: #00ccff;
-  padding-left: 10px;
-}
-nav {
-  text-align: left;
-  padding: 20px;
-  background-color: #ff4e6b;
-}
-nav a {
-  text-decoration: none;
-  padding: 20px;
-  color: white;
-  letter-spacing: 3px;
-}
-.image {
-  display: flex;
-  background-color: #182137;
-  flex-direction: row;
-  padding: 20px;
-}
-img {
-  width: 380px;
-}
-.btn {
-  margin-left: 500px;
-  margin-top: 50px;
-  display: flex;
-  flex-direction: column;
-  background-color: #242d48;
-  border: 3px solid #242d48;
-  border-radius: 30px;
-  height: 450px;
-}
-.btn-1,
-.btn-2,
-.btn-3,
-.btn-4 {
-  margin: 20px;
-}
-
-.burger {
-  display: none;
-}
-
-.line {
-  width: 25px;
-  background-color: #ffffff;
-  height: 4px;
-  margin: 3px;
-}
-
-/* button animation copyright to their */
-/* From cssbuttons.io by @nikk7007 */
-.button {
-  padding: 0.8em 1.8em;
-  border: 2px solid #ff4e6b;
-  position: relative;
-  overflow: hidden;
-  background-color: transparent;
-  text-align: center;
-  text-transform: uppercase;
-  font-size: 25px;
-  transition: 0.3s;
-  z-index: 1;
-  font-family: inherit;
-  color: #ff4e6b;
-}
-
-.button::before {
-  content: "";
-  width: 0;
-  height: 300%;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%) rotate(45deg);
-  background: #ff4e6b;
-  transition: 0.5s ease;
-  display: block;
-  z-index: -1;
-}
-
-.button:hover::before {
-  width: 105%;
-}
-
-.button:hover {
-  color: #111;
-}
-#preloader{
-  background: #030303 url(/Potential\ Loading\ Icon\ is\ Pleasing.....\ -\ Imgur.gif) no-repeat center center;
-  background-size: 50%;
-  height: 100vh;
-  position: fixed;
-  width: 100%;
-}
-
-
-@media screen and (max-width: 1095px) {
-  nav a {
+.sidebar{
+    background-color: #182137;
     display: flex;
     flex-direction: column;
-    text-align: center;
-  }
-  nav {
-    height: 234px;
-    padding: 0px;
-    transition: all 0.3s ease-out;
-  }
-  .head {
-    display: flex;
-    flex-direction: column;
-  }
-  .image {
-    display: block;
-  }
-  img {
-    width: 310px;
-  }
-  .btn {
-    margin: 30px;
-  }
-  .button {
-    font-size: 20px;
-  }
-  .burger {
-    display: flex;
-    height: 50px;
-    flex-direction: column;
-    justify-content: center;
     align-items: center;
+    justify-content: center;
+}
+
+nav{
     background-color: #ff4e6b;
-    border-radius: 3px;
-  }
-  .v-nav {
-    height: 0px;
-    visibility: hidden;
-  }
+    padding: 16px;
+}
+ul{
+    list-style: none;
+    display: flex;
+    column-gap: 20px;
+}
+li{
+    font-size: 18px;
+    margin-left: 30px;
+    color: white;
+    font-family: "Rubik", sans-serif;
+}
+
+h1{
+    margin: 20px;
+    font-size: 20px;
+    color: white;
+    font-family: "Mochiy Pop P One", sans-serif;
+    word-spacing:10px;
+    letter-spacing:2px;
+}
+.Dojeto{
+    color: #00ccff;
+}
+
+.left{
+    margin: 20px;
+}
+
+img{
+    height: 550px;
+    border-radius: 20px;
+}
+
+.card {
+ width: fit-content;
+ height: 550px;
+ background-image: linear-gradient(163deg,  #ff4e6b 0%, #3700ff 100%);
+ border-radius: 20px;
+ transition: all .3s;
+}
+
+.card__content {
+ width: 100%;
+ height: 100%;
+ border-radius: 20px;
+ background-color: #ff4e6b;
+ transition: all .2s;
+ 
+}
+
+.card__content:hover {
+ transform: scale(0.98);
+ border-radius: 20px;
+}
+
+.card__content:hover {
+ box-shadow: 0px 0px 30px 1px #182137;
+}
+
+button {
+    width: 300px;
+    padding: 0.8em 1.8em;
+    border: 2px solid #ff4e6b;
+    position: relative;
+    overflow: hidden;
+    background-color: transparent;
+    text-align: center;
+    text-transform: uppercase;
+    font-size: 25px;
+    transition: .3s;
+    z-index: 1;
+    font-family: inherit;
+    color: #ff4e6b;
+   }
+   
+button::before {
+    content: '';
+    width: 0;
+    height: 300%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) rotate(45deg);
+    background: #ff4e6b;
+    transition: .5s ease;
+    display: block;
+    z-index: -1;
+   }
+   
+button:hover::before {
+    width: 105%;
+   }
+   
+button:hover {
+    color: #111;
+   }
+
+.lowwer{
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.btn{
+    margin-left: 450px;
+    margin-top: 60px;
+}
+.pad{
+    padding: 20px;
+}
+
+@media screen and (max-width: 1219px){
+    .btn{
+        margin-left: 50px;
+        margin-top: 20px;
+    }
+    button{
+        font-size: 20px;
+        width: 250px;
+    }
+    img{
+        height: 500px;
+    }
+    .card{
+        height: 500px;
+    }
+    h1{
+        text-align: center;
+    }
+    nav ul {
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+        column-gap: 0;
+        row-gap: 40px;
+        padding-top: 15px;
+      }
+    nav {
+        height: 234px;
+        padding: 0px;
+        transition: all 0.3s ease-out;
+    }
+    li{
+        margin: 0;
+        padding: 0;
+    }
+    .burger {
+        display: flex;
+        height: 50px;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        background-color: #ff4e6b;
+        border-radius: 3px;
+      }
+      .line {
+        width: 25px;
+        background-color: #ffffff;
+        height: 4px;
+        margin: 3px;
+      }
+      .v-nav {
+        height: 0px;
+        visibility: hidden;
+      }
 }
